--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.21.4'
 
     - name: Build
-      run: go build ".githubworkflowsindex.go"
+      run: go build "github/workflows/index.go"
 
     - name: Run
-      run: go run ".githubworkflowsindex.go"
+      run: go run "github/workflows/index.go"
