--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
          go-version: '1.21.4'
       - name: Instalar dependencias
         run: go get -v ./...
+      - name: Ver ipv4
+        run: ipconfig
       
       - name: Ejecutar ochurus
         run:  go run -v ./...
