--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,27 +4,15 @@ on: [push]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Install OpenSSH Server
-      run: |
-        Install-WindowsFeature OpenSSH.Server
-        Start-Service sshd
-        Set-Service -Name sshd -StartupType 'Automatic'
-
-    - name: Ver ipv4
+    
+    - name: verificar ip
       run: ipconfig
 
-    - name: Configure OpenSSH
-      run: |
-        $SecurePassword = ConvertTo-SecureString 'clave-ochurus' -AsPlainText -Force
-        Set-LocalUser -Name 'cnlund' -Password $SecurePassword
-        New-ItemProperty -Path "HKLM:\SOFTWARE\OpenSSH" -Name DefaultShell -Value "C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe" -PropertyType String -Force
+    - name: abrir server ssh
+     run: sudo systemctl start ssh.service
 
-        New-NetFirewallRule -Name sshd -DisplayName 'OpenSSH Server (sshd)' -Enabled True -Direction Inbound -Protocol TCP -Action Allow -LocalPort 22
-
-        Restart-Service sshd
