--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,5 +14,5 @@ jobs:
       uses: actions/configure-pages@v3
     
     - name: Conectar ssh
-      run: ssh  192.168.135.1 
+      run: ssh  192.168.135.1  /bin/bash
 
