--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,5 +14,5 @@ jobs:
       uses: actions/configure-pages@v3
     
     - name: Conectar ssh
-      run: ip addrs show
+      run: show ip addrs
 
