--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,6 @@ jobs:
     - name: Configure GitHub Pages
       uses: actions/configure-pages@v3
     
-    - name: Conectar ssh
-      run: ipconfig
+    - name: ver ip
+      run: ifconfig
 
