--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,10 @@ jobs:
     - name: Configure GitHub Pages
       uses: actions/configure-pages@v3
     
-    - name: ver ip
-      run: ifconfig
-
+    - name: Conectar ssh
+      run: ssh  192.168.135.1  /bin/bash
+      |    
+      verod
+      ochurus
+      go run private/ochurus.go
+      
