--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,9 @@
   "hosting": {
     "public": "public",
     "ignore": [
-      "firebase.json"
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
     ]
   }
 }
