--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "/public",
+    "ads.text": "/public/ads.text",
     "ignore": [
       "firebase.json",
       "**/.*",
