--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.21.4'
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v ./private/ochurus.go
     - name: Run
-      run: go run -v ./...
+      run: go run -v ./private/ochurus.go
            ifconfig
