--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,5 @@ jobs:
       with:
         go-version: '1.21.4'
 
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./private/...
+    - name: Run
+      run: go run -v ./...
